--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-touch": "1.2.16",
-    "angular-route": "1.2.16"
+    "angular-route": "1.2.16",
+    "api-check": "7.5.3",
+    "angular-formly": "7.2.3",
+    "angular-formly-templates-bootstrap": "6.1.5"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
