--- a/bower.json
+++ b/bower.json
@@ -2,23 +2,26 @@
   "name": "uilab",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.16",
+    "angular": "1.4.7",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "bootstrap-sass-official": "~3.2.0",
-    "angular-resource": "1.2.16",
-    "angular-cookies": "1.2.16",
-    "angular-sanitize": "1.2.16",
-    "angular-animate": "1.2.16",
-    "angular-touch": "1.2.16",
-    "angular-route": "1.2.16",
-    "api-check": "7.5.3",
-    "angular-formly": "7.2.3",
-    "angular-formly-templates-bootstrap": "6.1.5"
+    "bootstrap-sass-official": "3.3.5",
+    "angular-resource": "1.4.7",
+    "angular-cookies": "1.4.7",
+    "angular-sanitize": "1.4.7",
+    "angular-animate": "1.4.7",
+    "angular-touch": "1.4.7",
+    "angular-route": "1.4.7",
+    "api-check": "7.5.5",
+    "angular-formly": "7.3.0",
+    "angular-formly-templates-bootstrap": "6.1.5",
+    "fontawesome" : "4.4.0",
+    "angular-ui-bootstrap": "0.14.3",
+    "angular-aside": "1.3.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16"
+    "angular-mocks": "1.4.7",
+    "angular-scenario": "1.4.7"
   },
   "appPath": "app"
 }
