--- a/bower.json
+++ b/bower.json
@@ -15,13 +15,18 @@
     "api-check": "7.5.5",
     "angular-formly": "7.3.0",
     "angular-formly-templates-bootstrap": "6.1.5",
-    "fontawesome" : "4.4.0",
-    "angular-ui-bootstrap": "0.14.3",
-    "angular-aside": "1.3.0"
+    "fontawesome": "4.4.0",
+    "angular-bootstrap": "0.14.3",
+    "angular-aside": "1.3.0",
+    "ui-listView": "*",
+    "angular-toastr" : "*"
   },
   "devDependencies": {
     "angular-mocks": "1.4.7",
     "angular-scenario": "1.4.7"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "angular": "1.4.7"
+  }
 }
