--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,11 @@
     "angular-bootstrap": "0.14.3",
     "angular-aside": "1.3.0",
     "ui-listView": "*",
-    "angular-toastr" : "*"
+    "angular-toastr": "*",
+    "angular-validator": "*",
+    "jquery-ui": "*",
+    "placeholders": "*",
+    "ng-file-upload": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.4.7",
@@ -27,6 +31,7 @@
   },
   "appPath": "app",
   "resolutions": {
-    "angular": "1.4.7"
+    "angular": "1.4.7",
+    "angular-mocks": "1.4.7"
   }
 }
