Further Updates to deep merge core and client meta data

--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "jquery-ui": "*",
     "placeholders": "*",
     "ng-file-upload": "*",
-    "underscore.string" : "*"
+    "underscore.string" : "*",
+    "deep-diff" : "*"
   },
   "devDependencies": {
     "angular-mocks": "1.4.7",
