--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "placeholders": "*",
     "ng-file-upload": "*",
     "underscore.string" : "*",
-    "deep-diff" : "*"
+    "deep-diff" : "*",
+    "angularfire": "~1.1.3"
   },
   "devDependencies": {
     "angular-mocks": "1.4.7",
